--- a/style.css
+++ b/style.css
@@ -13,6 +13,16 @@ body{
     min-height: 100vh;
     background: rgb(60,60,60);
 }
+
+<!-- background-image: -webkit-linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(img/back-customers-min.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(img/back-customers-min.jpg);
+    
+    background-size: cover;
+    
+    background-position: center;
+    height: 100vh;
+    background-attachment: fixed; -->
+
 label{
     font-size: .9rem;
     color:#000;
