--- a/style.css
+++ b/style.css
@@ -11,6 +11,12 @@ body{
     justify-content: center;
     align-items: center;
     min-height: 100vh;
+    background-image: -webkit-linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(backimg.png);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(backimg.png);
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
+    background-attachment: fixed;
     background: rgb(60,60,60);
 }
 
