--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body{
     background-position: center;
     height: 100vh;
     background-attachment: fixed;
-    background: rgb(60,60,60);
+    <!-- background: rgb(60,60,60); -->
 }
 
 <!-- background-image: -webkit-linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(backimg.png);
