--- a/style.css
+++ b/style.css
@@ -15,9 +15,10 @@ body{
     background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(backimg.png);
     background-size: cover;
     background-position: center;
-    height: 100vh;
+    
     background-attachment: fixed;
-    <!-- background: rgb(60,60,60); -->
+    <!-- background: rgb(60,60,60);
+          height: 100vh; -->
 }
 
 <!-- background-image: -webkit-linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(backimg.png);
