--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
+    
     background-image: -webkit-linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(backimg.png);
     background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(backimg.png);
     background-size: cover;
@@ -18,7 +18,8 @@ body{
     
     background-attachment: fixed;
     <!-- background: rgb(60,60,60);
-          height: 100vh; -->
+          height: 100vh;
+         min-height: 100vh;-->
 }
 
 <!-- background-image: -webkit-linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(backimg.png);
