--- a/style.css
+++ b/style.css
@@ -36,7 +36,8 @@ label{
     color:#000;
 }
 .wrapper{
-    background: #fff;
+    <!-- background: #fff; -->
+    background: #777B7E;
     padding: 1rem;
     border-radius: .5rem;
     /* box-shadow: 1rem, rgb(70, 200, 240); */
