--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ label{
 }
 .wrapper{
     <!-- background: #fff; -->
-    background: #777B7E;
+    background: #555555;
     padding: 1rem;
     border-radius: .5rem;
     /* box-shadow: 1rem, rgb(70, 200, 240); */
